<resources>
    <string name="app_name">w_rds_pp</string>
    <string name="title_activity_game">GameActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_game_creator">NewGameCreatorActivity</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="w_underline">W ⎽⎽</string>
    <string name="congratulation">Congratulation</string>
    <string name="you_successfully_solved_this_puzzle">You solved this puzzle in </string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="ultra">Ultra</string>
    <string name="select_category">Select Category</string>
    <string name="remove">Remove</string>
    <string name="reset">Reset</string>
    <string name="any">Any</string>
    <string name="category">Category:</string>
    <string name="you_solved_it_in">You solved it in:</string>
    <string name="quotes_you_solved">Solved Quotes</string>
</resources>