<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SelectDifficultyFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SelectScreen_Header"
        android:text="@string/select_difficulty"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"/>
        <Button
            android:id="@+id/diff_easy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            style="@style/DifficultySelection_Button"
            android:backgroundTint="@color/diff_easy"
            android:text="@string/easy"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"/>
        <Button
            android:id="@+id/diff_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            style="@style/DifficultySelection_Button"
            android:backgroundTint="@color/diff_normal"
            android:text="@string/normal"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"/>
        <Button
            android:id="@+id/diff_hard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            style="@style/DifficultySelection_Button"
            android:backgroundTint="@color/diff_hard"
            android:text="@string/hard"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"/>
        <Button
            android:id="@+id/diff_ultra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            style="@style/DifficultySelection_Button"
            android:backgroundTint="@color/diff_ultra"
            android:text="@string/ultra"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"/>
    </LinearLayout>
</LinearLayout>